--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,6 +17,7 @@
             <div class="col main-content mt-2">
                 <h1 class="gold-special-txt">Welcome to the Guitar Vault</h1>
                 <div class="d-flex">
+                    <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-take ">New - view our subscription plans</a>
                     <a href="{% url 'guitars' %}" class="btn btn-lg btn-take ms-auto">Take a peek inside the vault!</a>
                 </div>
             </div>      
