--- a/subscriptions/templates/subscriptions/subscriptions.html
+++ b/subscriptions/templates/subscriptions/subscriptions.html
@@ -18,14 +18,25 @@
                 Subscriptions
             </div>
         </div>
+
         <div class="row h-100">
-            <div class="col main-content-col my-auto">
+            <div class="col-12 main-content-col my-auto">
+                <!--Summary-->
                 <div class="row">
-                    
+                    <div class="col-12">
+                        <p class="lead text-center mb-3">
+                            We offer 4 subscription plans. Primarily, these plans provide you access to guitars at that tier. But in addition, we also bundle in some additional nice features including, express delivery, new strings and a complete set-up.
+                        </p>
+                        <p class="text-center mb-3 gold-txt display-6">    
+                            Click on the package which suits your needs to sign-up.
+                        </p>
+                    </div>
+                </div>
+
+                <!--Subscription Cards-->
+                <div class="row">
                     {% for subscription in subscriptions %}
-                        
-                        <div class="col-12 col-md-6 col-lg-3">
-                            
+                        <div class="col-12 col-md-6 col-lg-3">                        
                             <div class="card subs-card 
                             {% if subscription.name == 'Platinum' %}plat-subs-card
                             {% elif subscription.name == 'Gold' %}gold-subs-card
@@ -33,26 +44,32 @@
                             {% elif subscription.name == 'Bronze' %}bronze-subs-card
                             {% endif %}">
                                 <div class="card-body">
-                                    <h5 class="card-title display-6"><strong>{{ subscription.name|upper }}</strong></h5>
-                                    <p class="card-text">{{ subscription.price }}</p>
-                                    <p class="card-text">{{ subscription.delivery }}</p>
+                                    <h5 class="card-title display-6 text-center"><strong>{{ subscription.name|upper }}</strong></h5>
+                                    <div class="d-flex flex-row">
+                                        <p class="col-6">Monthly Price:</p>
+                                        <p class="card-text">£{{ subscription.price }}</p>
+                                    </div>
+                                    <div class="d-flex flex-row">
+                                        <p class="col-6">Delivery:</p>
+                                        <p class="card-text">{{ subscription.delivery }}</p>
+                                    </div>
                                     <!--'yesno' django template feature to convert boolean True/False value-->
-                                    <p class="card-text">{{ subscription.re_stringed|yesno:"Yes,No" }}</p>
-                                    <p class="card-text">{{ subscription.set_up|yesno:"Yes,No" }}</p>
-                                </div>
-                            </div>
-                        </div>
-                       
-                    {% endfor %}
+                                    <div class="d-flex flex-row">
+                                        <p class="col-6">Re-Strung:</p>
+                                        <p class="card-text">{{ subscription.re_stringed|yesno:"Yes,No" }}</p>
+                                    </div>
+                                    <div class="d-flex flex-row">
+                                        <p class="col-6">Set-Up:</p>
+                                        <p class="card-text">{{ subscription.set_up|yesno:"Yes,No" }}</p>
+                                    </div>
 
-                </div>  <!--close sub-parent card row-->
+                                </div> <!--close card body-->
+                            </div> <!-- close card -->
+                        </div>   <!--close card col --> 
+                             
+                    {% endfor %}
+                </div>  <!--close cards row-->
             </div>      <!--close parent card col-->
-        </div>          <!--close parent card row-->
+        </div>          <!--close parent row-->
     </div>              <!--close conainer-->
 {% endblock %}
-
-{% with v.release.version as version %}
-<div class="pkg-buildinfo 
-            {% if version == pkg.b.release.version %}active{% else %}inactive{% endif %} 
-            {% if version == project.latest.version %}latest{% else %}notlatest{% endif %}">
-{% endwith %}
