Added hover effect to subscriptions card and improved visibility of text on gold subs card

--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -25,7 +25,7 @@
                     {% for guitar in guitars %}
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="card bg-dark guitar-card h-100">
+                            <div class="card bg-dark guitar-card h-100 gold-accent-outline">
 
                                 <!--card image -->
                                 {% if guitar.image_id %}
