--- a/subscriptions/templates/subscriptions/subscriptions.html
+++ b/subscriptions/templates/subscriptions/subscriptions.html
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-12">
                         <p class="lead text-center mb-3">
-                            We offer 4 subscription plans. Primarily, these plans provide you access to guitars at that tier. But in addition, we also bundle in some additional nice features including, express delivery, new strings and a complete set-up.
+                            We offer 4 subscription plans. Primarily, these plans provide you access to guitars at that tier. But in addition, we also bundle in some extra nice features including, express delivery, new strings and a complete set-up!
                         </p>
                         <p class="text-center mb-3 gold-txt display-6">    
                             Click on the package which suits your needs to sign-up.
@@ -37,7 +37,7 @@
                 <div class="row">
                     {% for subscription in subscriptions %}
                         <div class="col-12 col-md-6 col-lg-3">                        
-                            <div class="card subs-card 
+                            <div class="card subs-card
                             {% if subscription.name == 'Platinum' %}plat-subs-card
                             {% elif subscription.name == 'Gold' %}gold-subs-card
                             {% elif subscription.name == 'Silver' %}silver-subs-card
