Created bag app. Re-styled main and mobile nav to hold shopping bag and pick icons

--- a/subscriptions/templates/subscriptions/subscriptions.html
+++ b/subscriptions/templates/subscriptions/subscriptions.html
@@ -36,7 +36,7 @@
                 <!--Subscription Cards-->
                 <div class="row">
                     {% for subscription in subscriptions %}
-                        <div class="col-12 col-md-6 col-lg-3">                        
+                        <div class="col-12 col-md-6 col-lg-3 mb-2">                        
                             <div class="card subs-card
                             {% if subscription.name == 'Platinum' %}plat-subs-card
                             {% elif subscription.name == 'Gold' %}gold-subs-card
