--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -10,7 +10,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Guitar Vault Explained</a></li>
-                <li><a class="dropdown-item" href="#">Join</a></li>
+                <li><a class="dropdown-item" href="{% url 'subscriptions' %}">Our Subscription Plans</a></li>
                 <li><a class="dropdown-item" href="#">FAQ</a></li>
                 <li><a class="dropdown-item" href="#">Contact Us</a></li>
             </ul>
