Created bag contexts.py and restyled some gold colouring schemes for enhanced contrast

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,8 +17,8 @@
             <div class="col main-content mt-2">
                 <h1 class="gold-special-txt">Welcome to the Guitar Vault</h1>
                 <div class="d-flex">
-                    <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-take ">New - view our subscription plans</a>
-                    <a href="{% url 'guitars' %}" class="btn btn-lg btn-take ms-auto">Take a peek inside the vault!</a>
+                    <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline">New? View our subscription plans</a>
+                    <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline ms-auto">Take a peek inside the vault!</a>
                 </div>
             </div>      
         </div>          <!--Close Welcome row-->
