--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,16 +14,21 @@
 {% block content %}
     <div class="container h-100">
         <div class="row">
-            <div class="col main-content mt-2">
-                <h1 class="gold-special-txt">Shopping Bag</h1>
+            <div class="col mt-2">
+                <h1 class="gold-special-txt text-center">Shopping Bag</h1>
             </div>      
         </div>          <!--Close Welcome row-->
 
-
         <div class="row">
             <div class="col main-content mt-2">
-                
-               
+                {% if bag_items %}
+                    <div class="table-responsive">
+
+                    </div>
+               {% else %}
+                    <p class="lead mt-5"> You have not added anything to your bag</p>
+                    <a href="{% url 'subscriptions' %}" class="btn btn-gold-outline">View our subscription plans</a>
+                {% endif %}
             </div> 
         </div>         
 
