--- a/templates/base.html
+++ b/templates/base.html
@@ -107,26 +107,34 @@
                   <ul class="list-inline list-unstyled">
                     <!--Shopping Bag (all users)-->
                     <li class="list-inline-item ">
-                      <a class="ivory-txt gold-accent-txt" href="">
+                      <a class="ivory-txt gold-accent-txt" href="{% url 'view_bag' %}">
                         <div class="text-center">
                           <i class="fas fa-shopping-bag fa-2x"></i>
                         </div>
                         <p class="my-0">
-
+                          {% if grand_total %}
+                            £{{ grand_total|floatformat:2 }}
+                          {% else %}
+                            £0.00
+                          {% endif %}
                         </p>
                       </a>
                     </li>
 
                     {% if request.user.is_authenticated %}
                       <!--Picks to Spend (logged in users)-->
-                      <li class="list-inline-item">
+                      <li class="list-inline-item text-center">
                         <a class="ivory-txt gold-accent-txt" href="">
                           <div class="text-center">
                             <!--Temporary icon - to be replaced with SVG matching membership tier + counter for picks available-->
                             <i class="fas fa-map-marker fa-2x"></i>
                           </div>
                           <p class="my-0">
-
+                            {% if picks_total %}
+                              {{ picks_total }}
+                            {% else %}
+                              0
+                            {% endif %}
                           </p>
                         </a>
                       </li>
