--- a/templates/includes/mobile-nav-items.html
+++ b/templates/includes/mobile-nav-items.html
@@ -42,12 +42,16 @@
         <ul class="list-inline list-unstyled">
           <!--Shopping Bag (all users)-->
           <li class="list-inline-item ">
-            <a class="ivory-txt gold-accent-txt" href="">
+            <a class="ivory-txt gold-accent-txt" href="{% url 'view_bag' %}">
               <div class="text-center">
                 <i class="fas fa-shopping-bag fa-2x"></i>
               </div>
               <p class="my-0">
-
+                {% if grand_total %}
+                  £{{ grand_total|floatformat:2 }}
+                {% else %}
+                  £0.00
+                {% endif %}
               </p>
             </a>
           </li>
@@ -61,7 +65,11 @@
                   <i class="fas fa-map-marker fa-2x"></i>
                 </div>
                 <p class="my-0">
-
+                  {% if picks_total %}
+                    {{ picks_total }}
+                  {% else %}
+                    0
+                  {% endif %}
                 </p>
               </a>
             </li>
