updated bag contexts and django html tag to display total in nav bag total

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -23,7 +23,7 @@
             <div class="col main-content mt-2">
                 {% if bag_items %}
                     <div class="table-responsive">
-
+                        {{ bag_items }}
                     </div>
                {% else %}
                     <p class="lead mt-5"> You have not added anything to your bag</p>
