--- a/templates/base.html
+++ b/templates/base.html
@@ -112,8 +112,8 @@
                           <i class="fas fa-shopping-bag fa-2x"></i>
                         </div>
                         <p class="my-0">
-                          {% if grand_total %}
-                            £{{ grand_total|floatformat:2 }}
+                          {% if bag_total %}
+                            £{{ bag_total|floatformat:2 }}
                           {% else %}
                             £0.00
                           {% endif %}
