--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -20,29 +20,46 @@
         </div>          <!--Close Welcome row-->
 
         <div class="row">
-            <div class="col-6 offset-3 main-content mt-2 my-auto">
+            <div class="col-12 col-md-6 offset-md-3 main-content mt-2 my-auto">
 
                 {% if bag_items %}
-                    <p class="mt-3 lead">Thank you for choosing to join Guitar Vault.</p>
-                    <p>Your chosen plan is shown below;</p>     
-                    {% for item in bag_items %}
-                        
-                        <div class="d-flex flex-row">
-                            <p class="col-6">Subscription Tier:</p>
-                            <p class="col-6">{{ item.subscription }}</p>
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="mt-3 lead">Thank you for choosing to join Guitar Vault.</p>
+                            <p>Your chosen plan is shown below;</p>     
+                            {% for item in bag_items %}
+                                
+                                <div class="d-flex flex-row">
+                                    <p class="col-6">Subscription Tier:</p>
+                                    <p class="col-6">{{ item.subscription }}</p>
+                                </div>
+                                <div class="d-flex flex-row">
+                                    <p class="col-6">Monthly Fee:</p>
+                                    <p class="col-6">£{{ item.subscription.price }}</p>
+                                </div>
+                            {% endfor %}
                         </div>
-                        <div class="d-flex flex-row">
-                            <p class="col-6">Monthly Fee:</p>
-                            <p class="col-6">£{{ item.subscription.price }}</p>
-                        </div>  
-                    {% endfor %}
+                    </div>  
+                       
                     
-                    <div class="d-flex justify-content-evenly mt-2 pb-3">
-                        <a class="btn btn-outline-secondary" type="button" href="{% url 'subscriptions' %}"><i class="fas fa-angle-left"></i>
-                            <span class="ms-2">Switch to Another Plan</span>
-                        </a>
-                        
-                        <btn class="btn btn-gold-outline" type="button" href="">Proceed to Payment</btn>
+                    <div class="row">
+                        <div class="col-12 justify-content-evenly mt-2 pb-3">
+                            <div class="row">
+                                <div class="col-10 offset-1 col-md-6 offset-md-0 mb-2">
+                                    <a class="btn btn-outline-secondary" type="button" href="{% url 'subscriptions' %}">
+                                        <i class="fas fa-angle-left"></i>
+                                        <span class="mx-2">Switch to Another Plan</span>
+                                    </a>
+                                </div>
+                                
+                                <div class="col-10 offset-1 col-md-6 offset-md-0">
+                                    <a class="btn btn-gold-outline" type="button" href="">
+                                        <span><i class="fas fa-credit-card"></i></span>
+                                        <span class="ps-2">Proceed to Payment</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 {% else %}
